[package]
name = "fsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

#[dev-dependencies]
#criterion = "0.3"

[[bench]]
name = "fsync_benchmark"
harness = false
